--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
+ 
     <header class="header">
         <div class="header-container container"> 
           <nav class="header-navigation">
@@ -17,7 +18,9 @@
             </a>
             <ul class="header-menu-list">
               <li class="header-menu-item">
-              <a class="header-menu-link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio
+              <a class="header-menu-link current" href="./index.html" 
+              target="_blank" rel="noopener noreferrer">
+              Studio
               </a>
               </li>
               <li class="header-menu-item">
@@ -44,6 +47,7 @@
     </header>
 
 <main>
+
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions
@@ -55,25 +59,38 @@
 
         <section class="feature">
           <div class="container">
+          
           <h2 class="visually-hidden">Our feature</h2>
           <ul class="feature-list">
               <li class="feature-list-item">
+                <div class="feature-icon">
+                  <img src="./images/antenna 1.svg" alt="antenna" width="64" height="64"> 
+                  </div>
               <h3 class="feature-list-title">Strategy</h3>
                 <p class="feature-list-subtitle">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.
               </p>  
             </li>
             <li class="feature-list-item">
+              <div class="feature-icon">
+              <img src="./images/Icon 2.svg" alt="clock" width="64" height="64">
+            </div>
             <h3 class="feature-list-title">Punctuality</h3>
                 <p class="feature-list-subtitle"> Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-icon">
+              <img src="./images/astronaut 1.svg" alt="astronaut" width="64">
+            </div>
               <h3 class="feature-list-title">Diligence</h3>
                 <p class="feature-list-subtitle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                 </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-icon">
+              <img src="./images/diagram 1.svg" alt="diagram" width="64">
+            </div>
               <h3 class="feature-list-title">Technologies</h3>
                 <p class="feature-list-subtitle">
                   Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -85,16 +102,34 @@
 
     <section class="team">
           <div class="container">
-          <h2 class="team-title">Our Team</h2>
-          <ul class="team-list">
-            <li class="team-list-item"> 
-                    <img src="./images/TeamCard1.jpg" alt="Mark Guerrero" 
+              <h2 class="team-title">Our Team</h2>
+                    <ul class="team-list">
+                        <li class="team-list-item"> 
+                          <img src="./images/TeamCard1.jpg" 
+                          alt="Mark Guerrero" 
                     width="264"/>
                   <div class="team-card">
                     <h3 class="team-list-title-item">Mark Guerrero</h3>
                   <p class="team-list-subtitle">Product Designer
-                  </p>  
-                </div>
+                  </p>
+                  <div class="social-link">
+                    <ul class="icon-list">
+                      <li>
+                        <a href="https://www.instagram.com/" target="_blank" >
+                        <img src="./images/instagram 2.svg" alt="instagram"></a>
+                      </li>
+                      <li>
+                        <a href="https://x.com/" target="_blank" ><img src="./images/twitter 1.svg" alt="twitter"></a>
+                      </li>
+                      <li>
+                        <a href="https://www.facebook.com/" target="_blank" ><img src="./images/facebook 1.svg" alt="facebook"></a>
+                      </li>
+                      <li>
+                        <a href="https://ua.linkedin.com/" target="_blank" ><img src="./images/linkedin 1.svg" alt="linkedin"></a>
+                      </li>
+                    </ul>  
+                  </div>  
+              </div>
             </li>
             <li class="team-list-item">
                   <img src="./images/TeamCard2.jpg" alt="Tom Ford"
@@ -103,6 +138,23 @@
                     <h3 class="team-list-title-item">Tom Ford </h3>
                   <p class="team-list-subtitle">Frontend Developer
                   </p>
+                  <div class="social-link">
+                    <ul class="">
+                      <li>
+                        <a href="">
+                        <img src="./images/instagram 2.svg" alt="instagram"></a>
+                      </li>
+                      <li>
+                        <a href=""><img src="./images/twitter 1.svg" alt="twitter"></a>
+                      </li>
+                      <li>
+                        <a href=""><img src="./images/facebook 1.svg" alt="facebook"></a>
+                      </li>
+                      <li>
+                        <a href=""><img src="./images/linkedin 1.svg" alt="linkedin"></a>
+                      </li>
+                    </ul>  
+                    </div>
                 </div>
             </li>
             <li class="team-list-item">
@@ -111,6 +163,23 @@
                   <div class="team-card"> 
                     <h3 class="team-list-title-item">Camila Garcia</h3>
                     <p class="team-list-subtitle">Marketing</p> 
+                    <div class="social-link">
+                      <ul class="">
+                        <li>
+                          <a href="">
+                          <img src="./images/instagram 2.svg" alt="instagram"></a>
+                        </li>
+                        <li>
+                          <a href=""><img src="./images/twitter 1.svg" alt="twitter"></a>
+                        </li>
+                        <li>
+                          <a href=""><img src="./images/facebook 1.svg" alt="facebook"></a>
+                        </li>
+                        <li>
+                          <a href=""><img src="./images/linkedin 1.svg" alt="linkedin"></a>
+                        </li>
+                      </ul>  
+                      </div>    
                 </div> 
             </li>
             <li class="team-list-item">
@@ -119,12 +188,29 @@
                 <div class="team-card">
                   <h3 class="team-list-title-item">Daniel Wilson</h3>
                   <p class="team-list-subtitle">UI Designer</p>
+                  <div class="social-link">
+                    <ul class="">
+                      <li>
+                        <a href="">
+                        <img src="./images/instagram 2.svg" alt="instagram"></a>
+                      </li>
+                      <li>
+                        <a href=""><img src="./images/twitter 1.svg" alt="twitter"></a>
+                      </li>
+                      <li>
+                        <a href=""><img src="./images/facebook 1.svg" alt="facebook"></a>
+                      </li>
+                      <li>
+                        <a href=""><img src="./images/linkedin 1.svg" alt="linkedin"></a>
+                      </li>
+                    </ul>  
+                    </div>
                 </div>
             </li>
           </ul> 
         </div>
       </section>
-      
+
       <section class="portfolio">
       <div class="container"> 
           <h2 class="portfolio-title">Our Portfolio</h2>
@@ -176,12 +262,30 @@
       </div> 
       </section>
     </main>
+ 
     <footer class="footer">
       <div class="container"> 
             <a class="footer-logo" href="./index.html">Web<span   class="logo-whith">Studio</span>
             </a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-      </div>
+           <div class="social-link">
+            <ul class="">
+              <li>
+                <a href="">
+                <img src="./images/instagram 2.svg" alt="instagram"></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/twitter 1.svg" alt="twitter"></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/facebook 1.svg" alt="facebook"></a>
+              </li>
+              <li>
+                <a href=""><img src="./images/linkedin 1.svg" alt="linkedin"></a>
+              </li>
+            </ul>  
+            </div>
+          </div>
     </footer>
 </body>
 </html>
