--- a/index.html
+++ b/index.html
@@ -115,17 +115,27 @@
                   <div class="social-link">
                     <ul class="icon-list">
                       <li>
-                        <a href="https://www.instagram.com/" target="_blank" >
-                        <img src="./images/instagram 2.svg" alt="instagram"></a>
+                        <a href="https://www.instagram.com/" target="_blank">
+                        <svg class="media-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use></svg>
+                        </a>
                       </li>
                       <li>
-                        <a href="https://x.com/" target="_blank" ><img src="./images/twitter 1.svg" alt="twitter"></a>
+                        <a href="https://twitter.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use></svg>
+                        </a>
                       </li>
                       <li>
-                        <a href="https://www.facebook.com/" target="_blank" ><img src="./images/facebook 1.svg" alt="facebook"></a>
+                        <a href="https://www.facebook.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook "></use>
+                        </a>
                       </li>
                       <li>
-                        <a href="https://ua.linkedin.com/" target="_blank" ><img src="./images/linkedin 1.svg" alt="linkedin"></a>
+                        <a href="https://ua.linkedin.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                        </a>
                       </li>
                     </ul>  
                   </div>  
@@ -139,22 +149,8 @@
                   <p class="team-list-subtitle">Frontend Developer
                   </p>
                   <div class="social-link">
-                    <ul class="">
-                      <li>
-                        <a href="">
-                        <img src="./images/instagram 2.svg" alt="instagram"></a>
-                      </li>
-                      <li>
-                        <a href=""><img src="./images/twitter 1.svg" alt="twitter"></a>
-                      </li>
-                      <li>
-                        <a href=""><img src="./images/facebook 1.svg" alt="facebook"></a>
-                      </li>
-                      <li>
-                        <a href=""><img src="./images/linkedin 1.svg" alt="linkedin"></a>
-                      </li>
-                    </ul>  
-                    </div>
+                  
+                  </div>
                 </div>
             </li>
             <li class="team-list-item">
@@ -164,21 +160,7 @@
                     <h3 class="team-list-title-item">Camila Garcia</h3>
                     <p class="team-list-subtitle">Marketing</p> 
                     <div class="social-link">
-                      <ul class="">
-                        <li>
-                          <a href="">
-                          <img src="./images/instagram 2.svg" alt="instagram"></a>
-                        </li>
-                        <li>
-                          <a href=""><img src="./images/twitter 1.svg" alt="twitter"></a>
-                        </li>
-                        <li>
-                          <a href=""><img src="./images/facebook 1.svg" alt="facebook"></a>
-                        </li>
-                        <li>
-                          <a href=""><img src="./images/linkedin 1.svg" alt="linkedin"></a>
-                        </li>
-                      </ul>  
+                     
                       </div>    
                 </div> 
             </li>
@@ -189,21 +171,7 @@
                   <h3 class="team-list-title-item">Daniel Wilson</h3>
                   <p class="team-list-subtitle">UI Designer</p>
                   <div class="social-link">
-                    <ul class="">
-                      <li>
-                        <a href="">
-                        <img src="./images/instagram 2.svg" alt="instagram"></a>
-                      </li>
-                      <li>
-                        <a href=""><img src="./images/twitter 1.svg" alt="twitter"></a>
-                      </li>
-                      <li>
-                        <a href=""><img src="./images/facebook 1.svg" alt="facebook"></a>
-                      </li>
-                      <li>
-                        <a href=""><img src="./images/linkedin 1.svg" alt="linkedin"></a>
-                      </li>
-                    </ul>  
+
                     </div>
                 </div>
             </li>
