--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
           <ul class="feature-list">
               <li class="feature-list-item">
                 <div class="feature-icon">
-                  <img src="./images/antenna 1.svg" alt="antenna" width="64" height="64"> 
+                  <svg class="" width="64" height="64">
+                    <use href="./images/icons.svg#icon-antenna"></use>
+                  </svg>
                   </div>
               <h3 class="feature-list-title">Strategy</h3>
                 <p class="feature-list-subtitle">Our goal is to identify the business
@@ -73,7 +75,9 @@
             </li>
             <li class="feature-list-item">
               <div class="feature-icon">
-              <img src="./images/Icon 2.svg" alt="clock" width="64" height="64">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
             </div>
             <h3 class="feature-list-title">Punctuality</h3>
                 <p class="feature-list-subtitle"> Bring the key message to the brand's audience for the best price within the shortest possible time.
@@ -81,7 +85,9 @@
             </li>
             <li class="feature-list-item">
               <div class="feature-icon">
-              <img src="./images/astronaut 1.svg" alt="astronaut" width="64">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
             </div>
               <h3 class="feature-list-title">Diligence</h3>
                 <p class="feature-list-subtitle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
@@ -89,7 +95,9 @@
             </li>
             <li class="feature-list-item">
               <div class="feature-icon">
-              <img src="./images/diagram 1.svg" alt="diagram" width="64">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
             </div>
               <h3 class="feature-list-title">Technologies</h3>
                 <p class="feature-list-subtitle">
@@ -149,8 +157,32 @@
                   <p class="team-list-subtitle">Frontend Developer
                   </p>
                   <div class="social-link">
-                  
-                  </div>
+                    <ul class="icon-list">
+                      <li>
+                        <a href="https://www.instagram.com/" target="_blank">
+                        <svg class="media-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use></svg>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://twitter.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use></svg>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.facebook.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook "></use>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://ua.linkedin.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                        </a>
+                      </li>
+                    </ul>  
+                  </div>  
                 </div>
             </li>
             <li class="team-list-item">
@@ -160,8 +192,32 @@
                     <h3 class="team-list-title-item">Camila Garcia</h3>
                     <p class="team-list-subtitle">Marketing</p> 
                     <div class="social-link">
-                     
-                      </div>    
+                      <ul class="icon-list">
+                        <li>
+                          <a href="https://www.instagram.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use></svg>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://twitter.com/" target="_blank">
+                            <svg class="media-icon" width="16" height="16">
+                              <use href="./images/icons.svg#icon-twitter"></use></svg>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://www.facebook.com/" target="_blank">
+                            <svg class="media-icon" width="16" height="16">
+                              <use href="./images/icons.svg#icon-facebook "></use>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://ua.linkedin.com/" target="_blank">
+                            <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                          </a>
+                        </li>
+                      </ul>  
+                    </div>   
                 </div> 
             </li>
             <li class="team-list-item">
@@ -171,8 +227,32 @@
                   <h3 class="team-list-title-item">Daniel Wilson</h3>
                   <p class="team-list-subtitle">UI Designer</p>
                   <div class="social-link">
-
-                    </div>
+                    <ul class="icon-list">
+                      <li>
+                        <a href="https://www.instagram.com/" target="_blank">
+                        <svg class="media-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use></svg>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://twitter.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use></svg>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.facebook.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook "></use>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://ua.linkedin.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                        </a>
+                      </li>
+                    </ul>  
+                  </div>  
                 </div>
             </li>
           </ul> 
@@ -236,23 +316,33 @@
             <a class="footer-logo" href="./index.html">Web<span   class="logo-whith">Studio</span>
             </a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-           <div class="social-link">
-            <ul class="">
-              <li>
-                <a href="">
-                <img src="./images/instagram 2.svg" alt="instagram"></a>
-              </li>
-              <li>
-                <a href=""><img src="./images/twitter 1.svg" alt="twitter"></a>
-              </li>
-              <li>
-                <a href=""><img src="./images/facebook 1.svg" alt="facebook"></a>
-              </li>
-              <li>
-                <a href=""><img src="./images/linkedin 1.svg" alt="linkedin"></a>
-              </li>
-            </ul>  
-            </div>
+            <div class="social-link">
+              <ul class="icon-list">
+                <li>
+                  <a href="https://www.instagram.com/" target="_blank">
+                  <svg class="media-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use></svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/" target="_blank">
+                    <svg class="media-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.facebook.com/" target="_blank">
+                    <svg class="media-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook "></use>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://ua.linkedin.com/" target="_blank">
+                    <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                  </a>
+                </li>
+              </ul>  
+            </div>  
           </div>
     </footer>
 </body>
