--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 
         <section class="feature">
           <div class="container">
-          
           <h2 class="visually-hidden">Our feature</h2>
           <ul class="feature-list">
               <li class="feature-list-item">
@@ -76,7 +75,7 @@
             <li class="feature-list-item">
               <div class="feature-icon">
               <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
             <h3 class="feature-list-title">Punctuality</h3>
@@ -86,7 +85,7 @@
             <li class="feature-list-item">
               <div class="feature-icon">
               <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
               <h3 class="feature-list-title">Diligence</h3>
@@ -120,28 +119,28 @@
                     <h3 class="team-list-title-item">Mark Guerrero</h3>
                   <p class="team-list-subtitle">Product Designer
                   </p>
-                  <div class="social-link">
+                  <div class="social-contact">
                     <ul class="icon-list">
                       <li>
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a  class="social-link" href="https://www.instagram.com/" target="_blank">
                         <svg class="media-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use></svg>
                         </a>
                       </li>
                       <li>
-                        <a href="https://twitter.com/" target="_blank">
+                        <a  class="social-link" href="https://twitter.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter"></use></svg>
                         </a>
                       </li>
                       <li>
-                        <a href="https://www.facebook.com/" target="_blank">
+                        <a  class="social-link" href="https://www.facebook.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook "></use>
                         </a>
                       </li>
                       <li>
-                        <a href="https://ua.linkedin.com/" target="_blank">
+                        <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
                         </a>
                       </li>
@@ -156,28 +155,28 @@
                     <h3 class="team-list-title-item">Tom Ford </h3>
                   <p class="team-list-subtitle">Frontend Developer
                   </p>
-                  <div class="social-link">
+                  <div class="social-contact">
                     <ul class="icon-list">
                       <li>
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a class="social-link" href="https://www.instagram.com/" target="_blank">
                         <svg class="media-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use></svg>
                         </a>
                       </li>
                       <li>
-                        <a href="https://twitter.com/" target="_blank">
+                        <a class="social-link" href="https://twitter.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter"></use></svg>
                         </a>
                       </li>
                       <li>
-                        <a href="https://www.facebook.com/" target="_blank">
+                        <a class="social-link" href="https://www.facebook.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook "></use>
                         </a>
                       </li>
                       <li>
-                        <a href="https://ua.linkedin.com/" target="_blank">
+                        <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
                         </a>
                       </li>
@@ -191,28 +190,28 @@
                   <div class="team-card"> 
                     <h3 class="team-list-title-item">Camila Garcia</h3>
                     <p class="team-list-subtitle">Marketing</p> 
-                    <div class="social-link">
+                    <div class="social-contact">
                       <ul class="icon-list">
                         <li>
-                          <a href="https://www.instagram.com/" target="_blank">
+                          <a class="social-link" href="https://www.instagram.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-instagram"></use></svg>
                           </a>
                         </li>
                         <li>
-                          <a href="https://twitter.com/" target="_blank">
+                          <a  class="social-link" href="https://twitter.com/" target="_blank">
                             <svg class="media-icon" width="16" height="16">
                               <use href="./images/icons.svg#icon-twitter"></use></svg>
                           </a>
                         </li>
                         <li>
-                          <a href="https://www.facebook.com/" target="_blank">
+                          <a class="social-link" href="https://www.facebook.com/" target="_blank">
                             <svg class="media-icon" width="16" height="16">
                               <use href="./images/icons.svg#icon-facebook "></use>
                           </a>
                         </li>
                         <li>
-                          <a href="https://ua.linkedin.com/" target="_blank">
+                          <a  class="social-link" href="https://ua.linkedin.com/" target="_blank">
                             <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
                           </a>
                         </li>
@@ -226,28 +225,28 @@
                 <div class="team-card">
                   <h3 class="team-list-title-item">Daniel Wilson</h3>
                   <p class="team-list-subtitle">UI Designer</p>
-                  <div class="social-link">
+                  <div class="social-contact">
                     <ul class="icon-list">
                       <li>
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a class="social-link" href="https://www.instagram.com/" target="_blank">
                         <svg class="media-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use></svg>
                         </a>
                       </li>
                       <li>
-                        <a href="https://twitter.com/" target="_blank">
+                        <a class="social-link" href="https://twitter.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter"></use></svg>
                         </a>
                       </li>
                       <li>
-                        <a href="https://www.facebook.com/" target="_blank">
+                        <a  class="social-link" href="https://www.facebook.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook "></use>
                         </a>
                       </li>
                       <li>
-                        <a href="https://ua.linkedin.com/" target="_blank">
+                        <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
                         </a>
                       </li>
@@ -313,36 +312,43 @@
  
     <footer class="footer">
       <div class="container"> 
+        <ul>
+        <li>
             <a class="footer-logo" href="./index.html">Web<span   class="logo-whith">Studio</span>
             </a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            <div class="social-link">
+            </li>
+            <li>
+            <div class="social-contact footer-social-contact">
+              <h3 class="footer-list-title">Social media</h3>
               <ul class="icon-list">
                 <li>
-                  <a href="https://www.instagram.com/" target="_blank">
-                  <svg class="media-icon" width="16" height="16">
+                  <a class="social-link" href="https://www.instagram.com/" target="_blank">
+                  <svg class="media-icon" width="14" height="14">
                     <use href="./images/icons.svg#icon-instagram"></use></svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/" target="_blank">
-                    <svg class="media-icon" width="16" height="16">
+                  <a class="social-link" href="https://twitter.com/" target="_blank">
+                    <svg class="media-icon" width="14" height="14">
                       <use href="./images/icons.svg#icon-twitter"></use></svg>
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.facebook.com/" target="_blank">
-                    <svg class="media-icon" width="16" height="16">
+                  <a  class="social-link" href="https://www.facebook.com/" target="_blank">
+                    <svg class="media-icon" width="14" height="14">
                       <use href="./images/icons.svg#icon-facebook "></use>
                   </a>
                 </li>
                 <li>
-                  <a href="https://ua.linkedin.com/" target="_blank">
-                    <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                  <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
+                    <svg class="media-icon" width="14" height="14"><use href="./images/icons.svg#icon-linkedin"></use>
                   </a>
                 </li>
               </ul>  
-            </div>  
+            </div> 
+          </li>
+          </ul> 
           </div>
     </footer>
 </body>
