--- a/index.html
+++ b/index.html
@@ -312,44 +312,44 @@
  
     <footer class="footer">
       <div class="container"> 
-        <ul>
+        <ul class="footer-list">
         <li>
             <a class="footer-logo" href="./index.html">Web<span   class="logo-whith">Studio</span>
             </a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            </li>
-            <li>
-            <div class="social-contact footer-social-contact">
+        </li>
+        <li>
+            <div class="footer-social-contact">
               <h3 class="footer-list-title">Social media</h3>
               <ul class="icon-list">
                 <li>
                   <a class="social-link" href="https://www.instagram.com/" target="_blank">
-                  <svg class="media-icon" width="14" height="14">
+                  <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use></svg>
                   </a>
                 </li>
                 <li>
                   <a class="social-link" href="https://twitter.com/" target="_blank">
-                    <svg class="media-icon" width="14" height="14">
+                    <svg class="media-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-twitter"></use></svg>
                   </a>
                 </li>
                 <li>
                   <a  class="social-link" href="https://www.facebook.com/" target="_blank">
-                    <svg class="media-icon" width="14" height="14">
+                    <svg class="media-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook "></use>
                   </a>
                 </li>
                 <li>
                   <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
-                    <svg class="media-icon" width="14" height="14"><use href="./images/icons.svg#icon-linkedin"></use>
+                    <svg class="media-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use>
                   </a>
                 </li>
-              </ul>  
+              </ul> 
             </div> 
-          </li>
-          </ul> 
-          </div>
+        </li>
+      </ul> 
+      </div>
     </footer>
 </body>
 </html>
