--- a/index.html
+++ b/index.html
@@ -263,35 +263,50 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-menu">
               <li class="portfolio-menu-item">
+                <div class="portfolio-item-wrap">
                   <img src="./images/img1.jpg" alt="Banking App" width="360"> 
+                  <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  </div>
                   <div class="portfolio-card">
                   <h3 class="portfolio-menu-item-title">Banking App</h3>
                   <p class="portfolio-subtitle">App</p>
                 </div>
               </li>
               <li class="portfolio-menu-item">
+                <div class="portfolio-item-wrap">
                   <img src="./images/img2.jpg" alt="Cashless Payment" width="360">
+                  <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                   <div class="portfolio-card">
                   <h3 class="portfolio-menu-item-title">Cashless Payment</h3>
                   <p class="portfolio-subtitle">Marketing</p>
                 </div>
               </li>
               <li class="portfolio-menu-item">
+                <div class="portfolio-item-wrap">
                   <img src="./images/img3.jpg" alt="Meditation App" width="360">
+                  <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                   <div class="portfolio-card">
                     <h3 class="portfolio-menu-item-title">Meditation App</h3>
                     <p class="portfolio-subtitle">App</p>
                   </div>
               </li>
                 <li class="portfolio-menu-item">
+                  <div class="portfolio-item-wrap">
                       <img src="./images/img4.jpg" alt="Taxi Service" width="360">
+                      <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
                       <div class="portfolio-card">
                       <h3 class="portfolio-menu-item-title">Taxi Service</h3>
                       <p class="portfolio-subtitle">Marketing
                       </p>
                   </div>
                 <li class="portfolio-menu-item">
+                  <div class="portfolio-item-wrap">
                       <img src="./images/img5.jpg" alt="Screen Illustrations" width="360">
+                      <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
                       <div class="portfolio-card">
                       <h3 class="portfolio-menu-item-title">Screen Illustrations</h3>
                       <p class="portfolio-subtitle">Design
@@ -299,7 +314,10 @@
                     </div> 
                   </li>
                   <li class="portfolio-menu-item"> 
+                    <div class="portfolio-item-wrap">
                 <img src="./images/img6.jpg" alt="Online Courses" width="360">
+                <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
                 <div class="portfolio-card">
               <h3 class="portfolio-menu-item-title">Online Courses</h3>
               <p class="portfolio-subtitle">Marketing</p>
