--- a/index.html
+++ b/index.html
@@ -119,33 +119,31 @@
                     <h3 class="team-list-title-item">Mark Guerrero</h3>
                   <p class="team-list-subtitle">Product Designer
                   </p>
-                  <div class="social-contact">
                     <ul class="icon-list">
-                      <li>
+                      <li class="social-item">
                         <a  class="social-link" href="https://www.instagram.com/" target="_blank">
                         <svg class="media-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use></svg>
                         </a>
                       </li>
-                      <li>
+                      <li class="social-item">
                         <a  class="social-link" href="https://twitter.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter"></use></svg>
                         </a>
                       </li>
-                      <li>
+                      <li class="social-item">
                         <a  class="social-link" href="https://www.facebook.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook "></use>
                         </a>
                       </li>
-                      <li>
+                      <li class="social-item">
                         <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
                         </a>
                       </li>
                     </ul>  
-                  </div>  
               </div>
             </li>
             <li class="team-list-item">
@@ -155,33 +153,31 @@
                     <h3 class="team-list-title-item">Tom Ford </h3>
                   <p class="team-list-subtitle">Frontend Developer
                   </p>
-                  <div class="social-contact">
                     <ul class="icon-list">
-                      <li>
+                      <li  class="social-item">
                         <a class="social-link" href="https://www.instagram.com/" target="_blank">
                         <svg class="media-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram"></use></svg>
                         </a>
                       </li>
-                      <li>
+                      <li class="social-item">
                         <a class="social-link" href="https://twitter.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter"></use></svg>
-                        </a>
+                        </a> 
                       </li>
-                      <li>
+                      <li class="social-item">
                         <a class="social-link" href="https://www.facebook.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook "></use>
                         </a>
                       </li>
-                      <li>
+                      <li class="social-item">
                         <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
                         </a>
                       </li>
-                    </ul>  
-                  </div>  
+                    </ul>   
                 </div>
             </li>
             <li class="team-list-item">
@@ -190,33 +186,31 @@
                   <div class="team-card"> 
                     <h3 class="team-list-title-item">Camila Garcia</h3>
                     <p class="team-list-subtitle">Marketing</p> 
-                    <div class="social-contact">
-                      <ul class="icon-list">
-                        <li>
-                          <a class="social-link" href="https://www.instagram.com/" target="_blank">
+                    <ul class="icon-list">
+                      <li class="social-item">
+                        <a  class="social-link" href="https://www.instagram.com/" target="_blank">
+                        <svg class="media-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use></svg>
+                        </a>
+                      </li>
+                      <li class="social-item">
+                        <a  class="social-link" href="https://twitter.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-instagram"></use></svg>
-                          </a>
-                        </li>
-                        <li>
-                          <a  class="social-link" href="https://twitter.com/" target="_blank">
-                            <svg class="media-icon" width="16" height="16">
-                              <use href="./images/icons.svg#icon-twitter"></use></svg>
-                          </a>
-                        </li>
-                        <li>
-                          <a class="social-link" href="https://www.facebook.com/" target="_blank">
-                            <svg class="media-icon" width="16" height="16">
-                              <use href="./images/icons.svg#icon-facebook "></use>
-                          </a>
-                        </li>
-                        <li>
-                          <a  class="social-link" href="https://ua.linkedin.com/" target="_blank">
-                            <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
-                          </a>
-                        </li>
-                      </ul>  
-                    </div>   
+                            <use href="./images/icons.svg#icon-twitter"></use></svg>
+                        </a>
+                      </li>
+                      <li class="social-item">
+                        <a  class="social-link" href="https://www.facebook.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook "></use>
+                        </a>
+                      </li>
+                      <li class="social-item">
+                        <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
+                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                        </a>
+                      </li>
+                    </ul>  
                 </div> 
             </li>
             <li class="team-list-item">
@@ -225,33 +219,31 @@
                 <div class="team-card">
                   <h3 class="team-list-title-item">Daniel Wilson</h3>
                   <p class="team-list-subtitle">UI Designer</p>
-                  <div class="social-contact">
-                    <ul class="icon-list">
-                      <li>
-                        <a class="social-link" href="https://www.instagram.com/" target="_blank">
+                  <ul class="icon-list">
+                    <li class="social-item">
+                      <a  class="social-link" href="https://www.instagram.com/" target="_blank">
+                      <svg class="media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use></svg>
+                      </a>
+                    </li>
+                    <li class="social-item">
+                      <a  class="social-link" href="https://twitter.com/" target="_blank">
                         <svg class="media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use></svg>
-                        </a>
-                      </li>
-                      <li>
-                        <a class="social-link" href="https://twitter.com/" target="_blank">
-                          <svg class="media-icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-twitter"></use></svg>
-                        </a>
-                      </li>
-                      <li>
-                        <a  class="social-link" href="https://www.facebook.com/" target="_blank">
-                          <svg class="media-icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-facebook "></use>
-                        </a>
-                      </li>
-                      <li>
-                        <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
-                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
-                        </a>
-                      </li>
-                    </ul>  
-                  </div>  
+                          <use href="./images/icons.svg#icon-twitter"></use></svg>
+                      </a>
+                    </li>
+                    <li class="social-item">
+                      <a  class="social-link" href="https://www.facebook.com/" target="_blank">
+                        <svg class="media-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook "></use>
+                      </a>
+                    </li>
+                    <li class="social-item">
+                      <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
+                        <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                      </a>
+                    </li>
+                  </ul>  
                 </div>
             </li>
           </ul> 
@@ -329,36 +321,34 @@
     </main>
  
     <footer class="footer">
-      <div class="container"> 
-        <ul class="footer-list">
-        <li>
+      <div class=" footer-container container"> 
+          <div class="footer-logo-text" >
             <a class="footer-logo" href="./index.html">Web<span   class="logo-whith">Studio</span>
             </a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </li>
-        <li>
+          </div>
             <div class="footer-social-contact">
-              <h3 class="footer-list-title">Social media</h3>
-              <ul class="icon-list">
-                <li>
+              <p class="footer-list-title">Social media</p>
+              <ul class="footer-icon-list">
+                <li  class="social-item">
                   <a class="social-link" href="https://www.instagram.com/" target="_blank">
                   <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use></svg>
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a class="social-link" href="https://twitter.com/" target="_blank">
                     <svg class="media-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-twitter"></use></svg>
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a  class="social-link" href="https://www.facebook.com/" target="_blank">
                     <svg class="media-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook "></use>
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
                     <svg class="media-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use>
                   </a>
