--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
                       <li class="social-item">
                         <a  class="social-link" href="https://www.facebook.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-facebook "></use>
+                            <use href="./images/icons.svg#icon-facebook "></use></svg>
                         </a>
                       </li>
                       <li class="social-item">
                         <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
-                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                         </a>
                       </li>
                     </ul>  
@@ -169,12 +169,12 @@
                       <li class="social-item">
                         <a class="social-link" href="https://www.facebook.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-facebook "></use>
+                            <use href="./images/icons.svg#icon-facebook "></use></svg>
                         </a>
                       </li>
                       <li class="social-item">
                         <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
-                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                         </a>
                       </li>
                     </ul>   
@@ -202,12 +202,12 @@
                       <li class="social-item">
                         <a  class="social-link" href="https://www.facebook.com/" target="_blank">
                           <svg class="media-icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-facebook "></use>
+                            <use href="./images/icons.svg#icon-facebook "></use></svg>
                         </a>
                       </li>
                       <li class="social-item">
                         <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
-                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                          <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                         </a>
                       </li>
                     </ul>  
@@ -235,12 +235,12 @@
                     <li class="social-item">
                       <a  class="social-link" href="https://www.facebook.com/" target="_blank">
                         <svg class="media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook "></use>
+                          <use href="./images/icons.svg#icon-facebook "></use></svg>
                       </a>
                     </li>
                     <li class="social-item">
                       <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
-                        <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use>
+                        <svg class="media-icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                       </a>
                     </li>
                   </ul>  
@@ -345,17 +345,16 @@
                 <li class="social-item">
                   <a  class="social-link" href="https://www.facebook.com/" target="_blank">
                     <svg class="media-icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-facebook "></use>
+                      <use href="./images/icons.svg#icon-facebook "></use></svg>
                   </a>
                 </li>
                 <li class="social-item">
                   <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
-                    <svg class="media-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use>
+                    <svg class="media-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                   </a>
                 </li>
               </ul> 
             </div> 
-        </li>
       </ul> 
       </div>
     </footer>
