--- a/index.html
+++ b/index.html
@@ -330,33 +330,35 @@
             <div class="footer-social-contact">
               <p class="footer-list-title">Social media</p>
               <ul class="footer-icon-list">
-                <li  class="social-item">
-                  <a class="social-link" href="https://www.instagram.com/" target="_blank">
+                <li  class="footer-social-item">
+                  <a class="footer-social-link" href="https://www.instagram.com/" target="_blank">
                   <svg class="media-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use></svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a class="social-link" href="https://twitter.com/" target="_blank">
+                <li class="footer-social-item">
+                  <a class="footer-social-link" href="https://twitter.com/" target="_blank">
                     <svg class="media-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-twitter"></use></svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a  class="social-link" href="https://www.facebook.com/" target="_blank">
+                <li class="footer-social-item">
+                  <a  class="footer-social-link" href="https://www.facebook.com/" target="_blank">
                     <svg class="media-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook "></use></svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a class="social-link" href="https://ua.linkedin.com/" target="_blank">
+                <li class="footer-social-item">
+                  <a class="footer-social-link" href="https://ua.linkedin.com/" target="_blank">
                     <svg class="media-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                   </a>
                 </li>
               </ul> 
             </div> 
-      </ul> 
+          </ul> 
       </div>
     </footer>
 </body>
 </html>
+
+
