--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
               <li class="portfolio-menu-item">
                 <div class="portfolio-item-wrap">
                   <img src="./images/img1.jpg" alt="Banking App" width="360"> 
-                  <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                   </div>
                   <div class="portfolio-card">
                   <h3 class="portfolio-menu-item-title">Banking App</h3>
@@ -268,7 +268,7 @@
               <li class="portfolio-menu-item">
                 <div class="portfolio-item-wrap">
                   <img src="./images/img2.jpg" alt="Cashless Payment" width="360">
-                  <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                   <div class="portfolio-card">
                   <h3 class="portfolio-menu-item-title">Cashless Payment</h3>
@@ -278,7 +278,7 @@
               <li class="portfolio-menu-item">
                 <div class="portfolio-item-wrap">
                   <img src="./images/img3.jpg" alt="Meditation App" width="360">
-                  <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                   <div class="portfolio-card">
                     <h3 class="portfolio-menu-item-title">Meditation App</h3>
@@ -288,7 +288,7 @@
                 <li class="portfolio-menu-item">
                   <div class="portfolio-item-wrap">
                       <img src="./images/img4.jpg" alt="Taxi Service" width="360">
-                      <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                      <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                       <div class="portfolio-card">
                       <h3 class="portfolio-menu-item-title">Taxi Service</h3>
@@ -298,7 +298,7 @@
                 <li class="portfolio-menu-item">
                   <div class="portfolio-item-wrap">
                       <img src="./images/img5.jpg" alt="Screen Illustrations" width="360">
-                      <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                      <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     </div>
                       <div class="portfolio-card">
                       <h3 class="portfolio-menu-item-title">Screen Illustrations</h3>
@@ -309,7 +309,7 @@
                   <li class="portfolio-menu-item"> 
                     <div class="portfolio-item-wrap">
                 <img src="./images/img6.jpg" alt="Online Courses" width="360">
-                <p class="portfolio-item-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
                 <div class="portfolio-card">
               <h3 class="portfolio-menu-item-title">Online Courses</h3>
@@ -333,25 +333,25 @@
               <ul class="footer-icon-list">
                 <li  class="footer-social-item">
                   <a class="footer-social-link" href="https://www.instagram.com/" target="_blank">
-                  <svg class="media-icon" width="24" height="24">
+                  <svg class="footer-media-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use></svg>
                   </a>
                 </li>
                 <li class="footer-social-item">
                   <a class="footer-social-link" href="https://twitter.com/" target="_blank">
-                    <svg class="media-icon" width="24" height="24">
+                    <svg class="footer-media-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-twitter"></use></svg>
                   </a>
                 </li>
                 <li class="footer-social-item">
                   <a  class="footer-social-link" href="https://www.facebook.com/" target="_blank">
-                    <svg class="media-icon" width="24" height="24">
+                    <svg class="footer-media-icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook "></use></svg>
                   </a>
                 </li>
                 <li class="footer-social-item">
                   <a class="footer-social-link" href="https://ua.linkedin.com/" target="_blank">
-                    <svg class="media-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                    <svg class="footer-media-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                   </a>
                   </li>
               </ul> 
